# NetworkPlayground

./: CMakeLists.txt  README.md
include/: mr_network.hpp
src/: CMakeLists.txt  main.cpp  mr_network.cpp
